# figment

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  index.html  vcpkg.json
editor/: CMakeLists.txt  figment_api.js  figment_lib.js  figment_template.js  index.html
editor/res/: shader.vert
editor/res/shaders/: framebuffer.frag  grid.frag  grid.vert
editor/src/: EditorLayer.cpp  EditorLayer.h  editor_layer.cpp  editor_layer.h  main.cpp  scene_renderer.cpp  scene_renderer.h
editor/wasm/: build.sh  wasm_module.cpp  wasm_module.h
engine/: CMakeLists.txt  Makefile.emscripten.mk  index.html
engine/lib/: stb_image.h
engine/lib/imgui/: imgui_impl_glfw.cpp
engine/lib/vk_imgui_presenter/: CMakeLists.txt  imgui_renderer.cpp  imgui_renderer.h  utils.h  vk_imgui_presenter.cpp  vk_imgui_presenter.h
engine/res/shaders/: basic.frag  circle.vert  default.wgsl  grid.wgsl  mesh.wgsl  mesh_textured.wgsl
engine/script-core/src/: Entity.cs  NativeFunctions.cs  ScriptCore.csproj
engine/src/: App.cpp  App.h  Application.cpp  Application.h  BindGroup.cpp  BindGroup.h  Camera.h  CameraController.cpp  CameraController.h  ComputePass.cpp  ComputePass.h  ComputePipeline.cpp  ComputePipeline.h  EditorLayer.cpp  GLRenderer.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PixelCanvas.cpp  PixelCanvas.h  RenderPass.cpp  RenderPass.h  WebGPURenderer.cpp  WebGPURenderer.h  application.cpp  application.h  renderer2.cpp  renderer2.h
engine/src/core/: Arena.h  BaseWindow.cpp  BaseWindow.h  DeletionQueue.h  FPSCounter.cpp  FPSCounter.h  Figment.h  FileUtils.h  Framebuffer.cpp  GUIContext.cpp  GUIContext.h  GfxContext.cpp  Handle.h  Image.cpp  Image.h  Input.cpp  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  ModelLoader.cpp  ModelLoader.h  Pool.cpp  Pool.h  Random.h  RenderContext.cpp  RenderContext.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  UUID.cpp  UUID.h  Utils.h  VertexArray.cpp  Window.cpp  Window.h
engine/src/debug/: DebugPanel.cpp  DebugPanel.h
engine/src/physics/: VerletPhysics.h
engine/src/renderer/: BindGroup.cpp  BindGroup.h  Buffer.h  Camera.cpp  Camera.h  ComputePass.cpp  ComputePass.h  ComputePipeline.cpp  ComputePipeline.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  OrthographicCamera.cpp  OrthographicCamera.h  OverlayRenderer.cpp  OverlayRenderer.h  ParticleRenderer.cpp  ParticleRenderer.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PixelRenderer.cpp  PixelRenderer.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderStats.cpp  RenderStats.h  RenderTarget.h  ShapeRenderer.cpp  ShapeRenderer.h  WebGPURenderer.cpp  WebGPURenderer.h
engine/src/scene/: CameraController.cpp  CameraController.h  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
engine/src/scripting/: CoreCLRScriptEngine.h  MonoScriptEngine.cpp  ScriptEngine.h
engine/src/utils/: AStar.h  Graph.h
engine/test/: AStarTests.cpp  ArenaTests.cpp  CMakeLists.txt  DeletionQueueTests.cpp  HandleTests.cpp  PoolTests.cpp  ResourceManagerTests.cpp  handle_tests.cpp
matrix-display/: CMakeLists.txt  index.html
matrix-display/src/: MatrixDisplay.cpp  MatrixDisplay.h  main.cpp
portfolio/: CMakeLists.txt  app.yaml  index.html
portfolio/res/shaders/: basic.wgsl  particle_disc_billboard.wgsl  particle_disc_billboard_worlds.wgsl  particle_mesh.wgsl  particles.wgsl  sand_simulation.wgsl  world_compute.wgsl
portfolio/src/: Asteroids.cpp  Asteroids.h  Cube.cpp  Cube.h  GameOfLife.h  MainLayer.cpp  MainLayer.h  Particles.cpp  Particles.h  SandSimulation.cpp  SandSimulation.h  Shapes.cpp  Shapes.h  WorldMap.cpp  WorldMap.h  main.cpp
portfolio/src/Asteroids/: Asteroids.cpp  Asteroids.h
portfolio/src/Cube/: Cube.cpp
portfolio/src/Galaxy/: Galaxy.cpp  Galaxy.h
portfolio/src/GameOfLife/: GameOfLife.cpp  GameOfLife.h
portfolio/src/MetaGameSim/: AStar.h  ActionPathSearch.h  MetaGameSim.cpp  MetaGameSim.h  MetaPlayer.cpp  PathSearch.h
portfolio/src/MetaPlayer/: AStar.h  MetaPlayer.cpp  MetaPlayer.h
portfolio/src/Shapes/: Shapes.cpp  Shapes.h
portfolio/src/Worlds/: WorldMap.cpp  WorldMap.h  Worlds.cpp  Worlds.h
renderer/: .gitignore  CMakeLists.txt  Makefile  Makefile.emscripten  Makefile.emscripten.mk  index.html
renderer/include/: App.h  Camera.h  Entity.h  Framebuffer.h  GLContext.h  GLObject.h  GLRenderer.h  GUIContext.h  Layer.h  OpenGLBuffer.h  OrthoCamera.h  PerspectiveCamera.h  Shader.h
renderer/lib/imgui/: imgui_impl_sdl.cpp
renderer/res/shaders/: basic.frag  basic.vert  circle.frag  circle.vert  framebuffer.frag  framebuffer.vert  grid.frag  grid.vert
renderer/script-core/: FigmentScriptCore.runtimeconfig.json
renderer/script-core/src/: Component.cs  CoreCLR.cs  Entity.cs  NativeFunctions.cs  Vec3.cs
renderer/src/: App.cpp  App.h  Assert.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EditorLayer.cpp  EditorLayer.h  FPSCounter.cpp  FPSCounter.h  FigmentAssert.h  Framebuffer.cpp  Framebuffer.h  GLContext.cpp  GLObject.cpp  GLRenderer.cpp  GLRenderer.h  GUIContext.cpp  GUIContext.h  GfxContext.cpp  GfxContext.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  OrthoCamera.cpp  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Shader.cpp  Shader.h  Utils.h  VertexArray.h  WebGPURenderer.cpp  WebGPURenderer.h  Window.cpp  (+2 more)
renderer/src/core/: Core.h  Framebuffer.h  GUIContext.h  GfxContext.cpp  GfxContext.h  Layer.h  Log.h  Random.cpp  Random.h  UUID.cpp  UUID.h  Window.cpp  Window.h
renderer/src/physics/: VerletPhysics.cpp  VerletPhysics.h
renderer/src/renderer/: Renderer.cpp  Renderer.h
renderer/src/scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
renderer/src/scripting/: CoreCLRScriptEngine.cpp  CoreCLRScriptEngine.h  MonoScriptEngine.cpp  MonoScriptEngine.h  ScriptEngine.cpp  (+3 more)
vk-app/: CMakeLists.txt
vk-app/res/: shader.frag  shader.frag.spv  shader.vert
vk-app/src/: MainLayer.cpp  MainLayer.h  main.cpp
(+161 files in other folders)
